--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,14 +23,18 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
+    - name: Build
       run: mvn -B package --file pom.xml
 
   test:
     runs-on: ubuntu-latest
+    needs: build
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
       - name: Run Unit Tests
-        run: mvn test
+        run: mvn -B test --file pom.xml
   
