--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,8 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
+        cache: maven
         java-version: '11'
     - name: Build
       run: mvn -B package --file pom.xml
@@ -34,6 +36,8 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
+          cache: maven
           java-version: '11'
       - name: Run Unit Tests
         run: mvn -B test --file pom.xml
