--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build
       run: mvn -B package --file pom.xml
 
-  test:
+  unit-tests:
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -42,3 +42,16 @@ jobs:
       - name: Run Unit Tests
         run: mvn -B test --file pom.xml
   
+  interface-tests:
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+        - name: Configurar ambiente
+          uses: actions/setup-node@v2
+          with:
+            node-version: '14'
+        - name: Instalar dependencias
+          run: npm install
+        - name: Executar testes de interface com Cypress
+          run: npm run cy:run
+        
