--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,12 +46,9 @@ jobs:
       runs-on: ubuntu-latest
       needs: unit-tests
       steps:
-        - name: Configurar ambiente
-          uses: actions/setup-node@v2
-          with:
-            node-version: '14'
-        - name: Instalar dependencias
-          run: npm install
-        - name: Executar testes de interface com Cypress
-          run: npm run cy:run
+      - uses: actions/checkout@v2
+      - uses: cypress-io/github-action@v2
+        with:
+          browser: chrome
+          working-directory: tests
         
