--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,9 +46,14 @@ jobs:
       runs-on: ubuntu-latest
       needs: unit-tests
       steps:
-      - uses: actions/checkout@v2
-      - uses: cypress-io/github-action@v2
-        with:
-          browser: chrome
-          working-directory: tests
+        - name: Configurar ambiente
+          uses: actions/setup-node@v2
+          with:
+            node-version: '14'
+        - name: Mudar para o diretorio de testes
+          run: cd tests
+        - name: Instalar dependências
+          run: npm install
+        - name: Executar testes de interface - Cypress
+          run: npm run cy:run
         
