--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,10 +1,4 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+# Workflow to Build and run tests
 
 name: Java CI with Maven
 
@@ -46,12 +40,12 @@ jobs:
       runs-on: ubuntu-latest
       needs: unit-tests
       steps:
+        - name: Mudar para o diretorio de testes
+          run: cd tests
         - name: Configurar ambiente
           uses: actions/setup-node@v2
           with:
             node-version: '14'
-        - name: Mudar para o diretorio de testes
-          run: cd tests
         - name: Instalar dependências
           run: npm install
         - name: Executar testes de interface - Cypress
