--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,9 @@ jobs:
       runs-on: ubuntu-latest
       needs: unit-tests
       steps:
+        - name: verificar diretorio
+          run: pwd
+          
         - name: Mudar para o diretorio de testes
           run: cd tests
         - name: Configurar ambiente
