--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,9 +38,9 @@ jobs:
   
   interface-tests:
       runs-on: ubuntu-latest
-      needs: unit-tests
+      needs: build
       steps:
         - name: verificar diretorio
           run: pwd
         - name: listar diretorios
-          run: ls -d
+          run: ls -d */
