--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,5 +42,5 @@ jobs:
       steps:
         - name: verificar diretorio
           run: pwd
-        - name: listar diretorios
-          run: ls
+        - name: Mudar de diretorio
+          run: cd ./tests
