--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,7 +40,14 @@ jobs:
       runs-on: ubuntu-latest
       needs: build
       steps:
-        - name: verificar diretorio
-          run: pwd
-        - name: Mudar de diretorio
-          run: cd ./tests
+        - uses: actions/checkout@v2
+        - name: Configurar ambiente
+          uses: actions/setup-node@v2
+          with:
+            node-version: '14'
+        - name: Instalar dependencias
+          run: npm install
+          working-directory: tests
+        - name: Executar testes de interface - Cypress
+          run: npm run cy:run
+          working-directory: tests
