--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,6 @@
 # Workflow to Build and run tests
 
-name: Java CI with Maven
+name: Build and Tests
 
 on:
   push:
@@ -38,7 +38,7 @@ jobs:
   
   interface-tests:
       runs-on: ubuntu-latest
-      needs: build
+      needs: unit-tests
       steps:
         - uses: actions/checkout@v2
         - name: Configurar ambiente
