--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,6 @@
 # Workflow to Build and run tests
 
-name: Build and Tests
+name: Build Tests Deploy
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
       with:
         distribution: 'temurin'
         cache: maven
-        java-version: '11'
+        java-version: '8'
     - name: Build
       run: mvn -B package --file pom.xml
 
@@ -32,7 +32,7 @@ jobs:
         with:
           distribution: 'temurin'
           cache: maven
-          java-version: '11'
+          java-version: '8'
       - name: Run Unit Tests
         run: mvn -B test --file pom.xml
   
@@ -51,3 +51,28 @@ jobs:
         - name: Executar testes de interface - Cypress
           run: npm run cy:run
           working-directory: tests
+
+
+  build-and-deploy:
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Setup Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+
+      - name: Build with Maven
+        run: mvn clean install
+
+      - name: Deploy to 000webhost
+        uses: SamKirkland/FTP-Deploy-Action@3.0.0
+        with:
+          server: ftp.000webhost.com
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /public_html/
+          local-dir: target/
+          
