--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,28 +51,18 @@ jobs:
         - name: Executar testes de interface - Cypress
           run: npm run cy:run
           working-directory: tests
-
-
-  build-and-deploy:
-      runs-on: ubuntu-latest
-      steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-
-      - name: Setup Java
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-
-      - name: Build with Maven
-        run: mvn clean install
-
-      - name: Deploy to 000webhost
-        uses: SamKirkland/FTP-Deploy-Action@3.0.0
-        with:
-          server: ftp.000webhost.com
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /public_html/
-          local-dir: target/
           
+  deploy:
+    runs-on: ubuntu-latest
+    needs: unit-tests
+
+    steps:
+    - name: Deploy to 000webhost
+      uses: SamKirkland/FTP-Deploy-Action@3.0.0
+      with:
+        server: ftp.000webhost.com
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        server-dir: /public_html/
+        local-file: manutencaoSoft/target/HotelLucena-1.0-SNAPSHOT.jar
+
