--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Deploy to 000webhost
       uses: SamKirkland/FTP-Deploy-Action@3.0.0
       with:
-        server: ftp.000webhost.com
+        server: files.000webhost.com
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         server-dir: /public_html/
