--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,7 +51,20 @@ jobs:
         - name: Executar testes de interface - Cypress
           run: npm run cy:run
           working-directory: tests
-          
+  
+  jmeter-tests:
+    runs-on: ubuntu-latest
+    needs: interface-tests
+    steps:
+      - name: Teste de Performance com JMeter
+        run: |
+          wget https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.4.1.tgz
+          tar -xzf apache-jmeter-5.4.1.tgz
+          curl -LJO https://github.com/OWNER/REPO/actions/runs/12345678/artifacts/manifest.json
+          BASE_URL=$(cat manifest.json | grep -Po '"baseUrl":.*?[^\\]",' | sed 's/"baseUrl":"\(.*\)",/\1/g')
+          apache-jmeter-5.4.1/bin/jmeter -n -t path/to/your/testplan.jmx -JbaseUrl=${BASE_URL} -l path/to/results.jtl
+        working-directory: ${{ github.workspace }}
+
   deploy:
     runs-on: ubuntu-latest
     needs: unit-tests
