--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -62,12 +62,11 @@ jobs:
           tar -xzf apache-jmeter-5.4.1.tgz
           curl -LJO https://github.com/OWNER/REPO/actions/runs/12345678/artifacts/manifest.json
           BASE_URL=$(cat manifest.json | grep -Po '"baseUrl":.*?[^\\]",' | sed 's/"baseUrl":"\(.*\)",/\1/g')
-          apache-jmeter-5.4.1/bin/jmeter -n -t testplan.jmx -JbaseUrl=${BASE_URL} -l path/to/results.jtl
-        working-directory: ${{ github.workspace }}
+          apache-jmeter-5.4.1/bin/jmeter -n -t testplan.jmx -JbaseUrl=${BASE_URL} -l results.jtl
 
   deploy:
     runs-on: ubuntu-latest
-    needs: unit-tests
+    needs: interface-tests
 
     steps:
     - name: Deploy to 000webhost
