--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,73 +23,76 @@ jobs:
       run: mvn -B package --file pom.xml
 
 
+
   unit-tests:
     runs-on: ubuntu-latest
-    needs: build
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          cache: maven
-          java-version: '8'
-      - name: Run Unit Tests
-        run: mvn -B test --file pom.xml
-      - name: Generate test report
-        run: |
-          # Install chart.js and the GitHub API client
-          npm install chart.js @actions/github
-          # Generate test report data
-          TEST_COUNT=$(grep -oE '<testsuites[^>]* tests="\K\d+' report.xml)
-          TEST_PASSED=$(grep -oE '<testsuites[^>]* passed="\K\d+' report.xml)
-          TEST_FAILED=$(grep -oE '<testsuites[^>]* failures="\K\d+' report.xml)
-          TEST_SKIPPED=$(grep -oE '<testsuites[^>]* skipped="\K\d+' report.xml)
-          # Generate chart
-          node -e "
-          const { Octokit } = require('@octokit/rest');
-          const Chart = require('chart.js');
-          const data = {
-            labels: ['Passed', 'Failed', 'Skipped'],
-            datasets: [
-              {
-                label: 'Test Results',
-                data: [$TEST_PASSED, $TEST_FAILED, $TEST_SKIPPED],
-                backgroundColor: ['#28a745', '#dc3545', '#ffc107']
-              }
-            ]
-          };
-          const config = {
-            type: 'doughnut',
-            data,
-            options: {
-              plugins: {
-                legend: {
-                  position: 'bottom'
-                }
+    - uses: actions/checkout@v2
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: 11
+
+    - name: Build with Maven
+      run: mvn -B clean package
+
+    - name: Run tests with Maven
+      run: mvn test
+
+    - name: Generate test report data
+      run: |
+        TEST_COUNT=$(grep -oE '<testsuites[^>]* tests="\K\d+' target/surefire-reports/TEST-com.example.AppTest.xml)
+        TEST_PASSED=$(grep -oE '<testsuites[^>]* passed="\K\d+' target/surefire-reports/TEST-com.example.AppTest.xml)
+        TEST_FAILED=$(grep -oE '<testsuites[^>]* failures="\K\d+' target/surefire-reports/TEST-com.example.AppTest.xml)
+        TEST_SKIPPED=$(grep -oE '<testsuites[^>]* skipped="\K\d+' target/surefire-reports/TEST-com.example.AppTest.xml)
+
+    - name: Generate chart
+      run: |
+        npm install chart.js
+        node -e "
+        const Chart = require('chart.js');
+        const data = {
+          labels: ['Passed', 'Failed', 'Skipped'],
+          datasets: [
+            {
+              label: 'Test Results',
+              data: [$TEST_PASSED, $TEST_FAILED, $TEST_SKIPPED],
+              backgroundColor: ['#28a745', '#dc3545', '#ffc107']
+            }
+          ]
+        };
+        const config = {
+          type: 'doughnut',
+          data,
+          options: {
+            plugins: {
+              legend: {
+                position: 'bottom'
               }
             }
-          };
-          const canvas = document.createElement('canvas');
-          const context = canvas.getContext('2d');
-          new Chart(context, config);
-          console.log(canvas.toDataURL());
-          "
-        id: chart
-      - name: Create chart issue comment
-        uses: actions/github-script@v4
-        with:
-          script: |
-            const octokit = new Octokit({ auth: process.env.GITHUB_TOKEN });
-            const { data: issue } = await octokit.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: 'Test Results',
-              body: `![Test Results](${{ steps.chart.outputs.chart }})`,
-            });
-            console.log(`Created issue comment ${issue.html_url}`);
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          }
+        };
+        const canvas = document.createElement('canvas');
+        const context = canvas.getContext('2d');
+        new Chart(context, config);
+        console.log(canvas.toDataURL());
+        " > chart.txt
+
+    - name: Create chart issue comment
+      uses: actions/github-script@v4
+      with:
+        script: |
+          const { data: issue } = await github.issues.createComment({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.issue.number,
+            body: `![Test Results](${fs.readFileSync('chart.txt', 'utf8')})`
+          });
+          console.log(`Created issue comment ${issue.html_url}`);
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
 
   interface-tests:
