--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,7 @@ jobs:
 
   unit-tests:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v2
 
@@ -33,6 +34,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: 11
+        distribution: 'temurin'
 
     - name: Build with Maven
       run: mvn -B clean package
