--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,7 +44,7 @@ jobs:
 
   deploy:
       runs-on: ubuntu-latest
-      needs: interface-tests
+      needs: unit-tests
       steps:
       - name: Deploy to 000webhost
         uses: SamKirkland/FTP-Deploy-Action@3.0.0
