--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -76,12 +76,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - name: Teste de Performance com JMeter
-        working-directory: tests
+      - name: Install JMeter
         run: |
-          wget https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.4.1.tgz
-          tar -xzf apache-jmeter-5.4.1.tgz
-          curl -LJO https://github.com/OWNER/REPO/actions/runs/12345678/artifacts/manifest.json
-          BASE_URL=$(cat manifest.json | grep -Po '"baseUrl":.*?[^\\]",' | sed 's/"baseUrl":"\(.*\)",/\1/g')
-          apache-jmeter-5.4.1/bin/jmeter -n -t testplan.jmx -JbaseUrl=${BASE_URL} -l results.jtl
-
+          sudo apt-get update
+          sudo apt-get install default-jre -y
+          sudo apt-get install jmeter -y
+        working-directory: tests
+      - name: Run Jmeter Tests
+        run: jmeter -n -t testplan.jmx -1 testreport.jtl
+        working-directory: tests
