--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
+    <repositories>
+        <repository>
+            <id>findbugs-repo</id>
+            <url>https://mvnrepository.com/artifact/com.google.code.findbugs</url>
+        </repository>
+    </repositories>
+
+
     <dependencies>
         
         <dependency>
