--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,29 +23,11 @@ jobs:
     - name: Build
       run: mvn -B package --file pom.xml
 
-    - name: FindBugs
-      run: mvn spotbugs:check -Dspotbugs.failOnError=false -Dspotbugs.includeFilterFile=findbugs.xml
-
-    - name: Print FindBugs Results
-      run: cat target/spotbugsXml.xml
-      if: always()
-
-    - name: Generate FindBugs report
-      run: mvn spotbugs:spotbugs
-
-    - name: Convert FindBugs report to HTML
-      run: mvn spotbugs:report
-
-    - name: Download FindBugs HTML report
-      uses: actions/download-artifact@v2
-      with:
-        name: spotbugs
-        path: spotbugs-report
-
-    - name: View FindBugs HTML report
-      run: |
-        echo "Open file://$(pwd)/spotbugs-report/index.html in your browser"
-
+    - name: SonarQube Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GTHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   unit-tests:
     runs-on: ubuntu-latest
