--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,17 +52,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GIHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=br.cesjf:HotelLucena
-
-  sonarcloud:
-    name: SonarCloud Scan
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GIHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      
+      - name: Show SonarQube report
+        uses: anikethsaha/sonarqube-table-reporter@v1.0.0
+        with:
+          projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
+          host: ${{ secrets.SONAR_HOST_URL }}
+          authToken: ${{ secrets.SONAR_TOKEN }}
 
   unit-tests:
     runs-on: ubuntu-latest
@@ -123,4 +119,4 @@ jobs:
           sudo apt-get install default-jre -y
           sudo apt-get install jmeter -y
       - name: Run Jmeter Tests
-        run: jmeter -n -t testplan.jmx -1 testreport.jtl
+        run: jmeter -n -t testplan.jmx -l testreport.jtl
