--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -94,9 +94,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
+      - name: Listar Arquivos e Pastas
+        run: |
+          # Listar arquivos e pastas e redirecionar a saída para um arquivo
+          ls -R > lista_arquivos_pastas.txt
+
+      - name: Visualizar Arquivos e Pastas
+        run: |
+          # Exibir o conteúdo do arquivo com a lista de arquivos e pastas
+          cat lista_arquivos_pastas.txt
       - name: Install JMeter
         run: |
-          ls
           sudo apt-get update
           sudo apt-get install default-jre -y
           sudo apt-get install jmeter -y
