--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,11 +23,6 @@ jobs:
           java-version: 11
           distribution: 'zulu' # Alternative distribution options are available.
       
-      - name: Listar Arquivos e Pastas
-        run: |
-          echo "Conteúdo do diretório:"
-          ls .
-      
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
@@ -89,9 +84,11 @@ jobs:
           uses: actions/setup-node@v2
           with:
             node-version: '14'
+
         - name: Instalar dependencias
           run: npm install
           working-directory: tests
+
         - name: Executar testes de interface - Cypress
           run: npm run cy:run
           working-directory: tests
@@ -100,6 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     # needs: deploy
     steps:
+      - uses: actions/checkout@v2
       - name: Install JMeter
         run: |
           sudo apt-get update
