--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -109,5 +109,6 @@ jobs:
       
       - name: Run Jmeter Tests
         run: |
+          cd apache-jmeter-5.4.3
           ls .
-          jmeter -n -t testplan.jmx -l testreport.jtl
+          apache-jmeter-5.4.3/bin/jmeter -n -t testplan.jmx -l testreport.jtl
