--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -109,8 +109,4 @@ jobs:
       
       - name: Run Jmeter Tests
         run: |
-          cd apache-jmeter-5.4.3
-          cd bin
-          ls .
-          .\\jmeter -n -t testplan.jmx -l testreport.jtl
-        working-directory: apache-jmeter-5.4.3\\bin
+          apache-jmeter-5.5\\bin\\jmeter -n -t testplan.jmx -l testreport.jtl
