--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,20 +45,44 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     needs: build
-    steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: 11
-        distribution: 'temurin'
+      - name: Set up JDK 8
+       uses: actions/setup-java@v2
+       with:
+         java-version: 8
 
-    - name: Build with Maven
-      run: mvn -B clean package
+     - name: Cache Maven packages
+       uses: actions/cache@v2
+       with:
+         path: ~/.m2/repository
+         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
 
-    - name: Run tests with Maven
-      run: mvn test
+     - name: Build with Maven
+       run: mvn clean package
+
+     - name: Run Unit Tests
+       run: mvn test
+
+     - name: Publish Test Results
+       uses: actions/upload-artifact@v2
+       with:
+         name: test-results
+         path: target/surefire-reports
+#    steps:
+#    - uses: actions/checkout@v2
+#
+#    - name: Set up JDK 11
+#      uses: actions/setup-java@v2
+#      with:
+#        java-version: 11
+#        distribution: 'temurin'
+#
+#    - name: Build with Maven
+#      run: mvn -B clean package
+#
+#    - name: Run tests with Maven
+#      run: mvn test
 
 
   deploy:
