--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,30 +45,30 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     needs: build
-      - uses: actions/checkout@v2
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 8
+      uses: actions/setup-java@v2
+      with:
+        java-version: 8
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: 8
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
 
-      - name: Cache Maven packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+    - name: Build with Maven
+      run: mvn clean package
 
-      - name: Build with Maven
-        run: mvn clean package
+    - name: Run Unit Tests
+      run: mvn test
 
-      - name: Run Unit Tests
-        run: mvn test
-
-      - name: Publish Test Results
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-results
-          path: target/surefire-reports
+    - name: Publish Test Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: target/surefire-reports
 #    steps:
 #    - uses: actions/checkout@v2
 #
