--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,6 +51,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: 8
+        distribution: 'temurin'
 
     - name: Cache Maven packages
       uses: actions/cache@v2
